# linear-haskell

./: .gitignore  CHANGELOG.markdown  README.md  cabal.project  linear-primitive.cabal
linear-keys/: README.md  linear-keys.cabal
linear-keys/src/Linear/: Key.hs  Range.hs
linear-keys/src/Linear/Unlifted/: Key.hs
linear-keys/src/Unlifted/: Key.hs
linear-logic/: Linear.hs  logic.cabal
linear-primitive/: linear-primitive.cabal
linear-primitive/src/Data/Primitive/Linear/: Array.hs  ByteArray.hs  SmallArray.hs  Token.hs
linear-primitive/src/Data/Primitive/Linear/Unlifted/: ByteArray.hs  Token.hs
src/Data/Primitive/Linear/: ByteArray.hs  SmallArray.hs
src/Data/Primitive/Linear/Unlifted/: ByteArray.hs  SmallArray.hs
src/Data/SmallArray/Mutable/: Linear.hs
src/Data/SmallArray/Mutable/Unlifted/: Linear.hs
