cabal-version: 3.4
name: linear-keys
version: 0
synopsis: linear keys
description: linear mutable data types
homepage: https://github.com/ekmett/haskell
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2021 Edward Kmett
stability: experimental
category: Data Structures
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md
tested-with: GHC == 9.0.1

source-repository head
  type: git
  location: https://github.com/ekmett/linear-keys

common base
  default-language: Haskell2010
  build-depends:
    base >= 4.15 && < 5,
    ghc-prim,
    linear-base,
    primitive,
    reflection,
    vector
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
    -Wno-simplifiable-class-constraints

library
  import: base
  hs-source-dirs: src
  exposed-modules:
    Linear.Range
    Linear.Key
    Linear.Unlifted.Key
